--- a/application/views/email/info_mail.html
+++ b/application/views/email/info_mail.html
@@ -1,10 +1,4 @@
-<?php
-
-function mailforgot($name, $link, $subject)
-{
-    return
-        '
-        <!DOCTYPE html>
+<!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -82,11 +76,11 @@ function mailforgot($name, $link, $subject)
                 <h3>' . $name . '</h3>
                 <div class="message">
                     
-                    <p>Berikut kami sampaikan bahwa <b><i>' . $subject . '</i></b> yang Anda lakukan telah berhasil, Silakan Klik tombol dibawah ini :</p>
+                    <p>Berikut kami sampaikan bahwa <b><i>' . $subject. '</i></b> yang Anda lakukan telah berhasil, Silakan Klik tombol dibawah ini :</p>
     
                 </div>
                 <div class="text-align:center" style="text-align: center;">
-                    <a class="button" style="color: #ffffff;" href="' . $link . '" >' . $subject . '</a>
+                    <a class="button" style="color: #ffffff;" href="' . base_url() . 'authorization/reset?email=' . $email . '&token=' . urlencode($token) . '" >' . $subject. '</a>
                 </div>
                 
                 <div>
@@ -103,13 +97,3 @@ function mailforgot($name, $link, $subject)
     
     </body>
     </html>
-    ';
-}
-
-// verifikasi
-
-// function mailvery($email, $token)
-// {
-
-//     return '';
-// }
