--- a/application/views/email/info_mail.html
+++ b/application/views/email/info_mail.html
@@ -76,12 +76,10 @@
                 <h3>' . $name . '</h3>
                 <div class="message">
                     
-                    <p>Berikut kami sampaikan bahwa <b><i>' . $subject. '</i></b> yang Anda lakukan telah berhasil, Silakan Klik tombol dibawah ini :</p>
+                    <p>Berikut kami sampaikan bahwa <b><i>' . $subject. '</i></b> yang Anda lakukan telah berhasil</p>
     
                 </div>
-                <div class="text-align:center" style="text-align: center;">
-                    <a class="button" style="color: #ffffff;" href="' . base_url() . 'authorization/reset?email=' . $email . '&token=' . urlencode($token) . '" >' . $subject. '</a>
-                </div>
+               
                 
                 <div>
                     <p>Selalu jaga kerahasiaan username dan password anda.</p>
