--- a/application/views/email/info_mail.html
+++ b/application/views/email/info_mail.html
@@ -72,11 +72,10 @@
                 <img class="logo" src="https://musaeri.my.id/assets/images/signin.png" alt="Logo ESSTAD">
             </div>
             <div class="content" style="color: #000000;">
-                <h4>Kepada YTH</h4>
-                <h3>' . $name . '</h3>
+                <h4>Hallo, ' . $name . '</h4> 
                 <div class="message">
                     
-                    <p>Berikut kami sampaikan bahwa <b><i>' . $subject. '</i></b> yang Anda lakukan telah berhasil</p>
+                    <p>Berikut kami sampaikan bahwa <b><i>' . $subject. '</i></b> yang anda lakukan telah berhasil</p>
     
                 </div>
                
