--- a/application/views/email/info_mail.html
+++ b/application/views/email/info_mail.html
@@ -69,7 +69,7 @@
     
         <div class="container">
             <div class="header">
-                <img class="logo" src="https://musaeri.my.id/assets/images/signin.png" alt="Logo ESSTAD">
+                <img class="logo" src="https://bspid.id/assets_frontend/img/icon_bspid.png" alt="Logo ESSTAD">
             </div>
             <div class="content" style="color: #000000;">
                 <h4>Hallo, ' . $name . '</h4> 
